<resources>
    <string name="app_name">MoviesChallenge</string>
    <string name="titulo_splash">App de películas</string>
    <string name="appMovie">Aplicación de películas</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="logIn">Iniciar sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_image">Movie image</string>
    <string name="menu_drawer">Menu Drawer</string>
    <string name="upcomingMovies">Próximas películas</string>
    <string name="proximas_peliculas">Próximas películas</string>
    <string name="peliculas_buscadas">Películas buscadas</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="pag_one">Página 1</string>
    <string name="search">Buscar</string>
    <string name="number_pages">Páginas del 1 al x</string>
    <string name="accept">Aceptar</string>
    <string name="campos_vacios">Campos vacíos</string>
    <string name="usuario_contra_no_vacios">El usuario y/o contraseña no deben estar vacíos.</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas</string>
    <string name="credenciales_no_correctas">Las credenciales no son correctas.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalle_pelicula">Detalle de película</string>
</resources>