<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/common_padding_min"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.upcoming.UpcomingFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Ocurrió algún error, verifique su conexión a internet y vuelva intentarlo luego."
        android:textSize="16sp"
        android:paddingStart="@dimen/common_padding_default"
        android:paddingEnd="@dimen/common_padding_default"
        android:paddingBottom="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPagina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pag_one"
        android:textSize="16sp"
        android:paddingStart="@dimen/common_padding_default"
        android:paddingEnd="@dimen/common_padding_default"
        android:paddingBottom="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etPagina"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvMovies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPagina"
        app:layout_constraintBottom_toTopOf="@id/btnSearch">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_movie"/>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPagina"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_min"
        android:inputType="number"
        android:maxLength="2"
        android:digits="0123456789"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_pages"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etPagina"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>